# doge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
doge/: core.py  doge.py  wow.py
doge/static/: 00a.png.txt  1380056797121.jpg.txt  1381432651256.jpg.txt  1381782484389.jpg.txt  1382219639146.jpg.txt  1382222529918.jpg.txt  4fc.jpg.txt  5af.jpg.txt  9ae.jpg.txt  9bf.jpg.txt  9f1.jpg.txt  YrXbtSE.jpg.txt  doge-small.txt  doge-xmas.txt  doge.png.txt  doge.txt  p9kzLiK.jpg.txt
snap/: snapcraft.yaml
src/doge/: __init__.py  __main__.py  core.py  wow.py
src/doge/static/: doge-earth.txt  doge-easter.txt  doge-halloween.txt  doge-kabosu.txt  doge-moon.txt  doge-small.txt  doge-thanksgiving.txt  doge-valentine.txt  doge.txt
tests/: test_doge.py
typings/fullmoon/: __init__.pyi  is_full_moon.pyi  next_full_moon.pyi
