[project]
name = "doge"
version = "3.9.1"
description = "wow very terminal doge"
authors = [{ name = "Olivia Thiderman", email = "olivia@thiderman.org" }]
urls = { Homepage = "https://github.com/Olivia5k/doge" }
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: Unix',
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["fullmoon>=1.0.2", "python-dateutil>=2.8.2"]

[project.scripts]
doge = "doge.core:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "T20", "D203", "D213", "D107", "S311"]
per-file-ignores."__init__.py" = ["D104"]
per-file-ignores."wow.py" = ["SIM905"]
per-file-ignores."tests/*" = ["S101", "S603", "INP001", "PLW1510"]
flake8-annotations.ignore-fully-untyped = true
flake8-type-checking.quote-annotations = true
